--- a/global.less
+++ b/global.less
@@ -31,6 +31,7 @@ position: relative;
     top: 65px;
     padding-left: 20‒;
     padding-left: 785px;
+    width: 1000px;
     }
     .menu a {
     display: inline-block;
