Font problem testing

--- a/global.less
+++ b/global.less
@@ -20,6 +20,34 @@ margin-bottom: 10px;
 color: #606060;
 
 }
+
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('Ubuntu-R-webfont.eot');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('Ubuntu-I-webfont.eot');
+	font-weight: normal;
+	font-style: italic;
+}
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('Ubuntu-B-webfont.eot');
+	font-weight: bold;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('Ubuntu-BI-webfont.eot');
+	font-weight: bold;
+	font-style: italic;
+}
+.test {
+	font-family: Ubuntu, arial, sans-serif;
+}
 .span3 {
 margin-left: 750px;
 position: fixed;
