--- a/global.css
+++ b/global.css
@@ -139,3 +139,49 @@ background:
   text-decoration:none;
 }
 
+/* FAQ_menu */ 
+
+div#faq{
+    position:relative
+}
+
+div#faq .menu{
+    position:absolute;
+    top:10px;
+    padding-left:310px;
+    width:1000px
+}
+
+div#faq .menu a{
+    display:inline-block;
+    padding:0 10px;
+    color:#959595;
+    text-decoration:none;
+    text-transform:UPPERCASE;
+    transition:color 0.4s ease 0s;font-size:14px
+}
+
+div#faq .menu a:hover{
+    color:#363636;
+    transition:color 0.4s ease 0s
+}
+
+/* Up button */
+
+a.idTop {
+ font-family: sans-serif;
+ font-size: 13px;
+ text-decoration: none;    
+ position: fixed; /*позиционирование кнопки фиксированное*/
+ z-index: 9999; /*отображаем поверх всех элементов*/
+ bottom: 0%; /*положение снизу*/
+ right: 0%; /*положение справа*/
+ background: #7db9e8; /*фон, можно указать любую картинку*/
+ opacity: .6; /*прозрачность*/
+ color: #fff; /*цвет текста*/
+ padding: 10px; /*внутренние отступы*/
+ margin: 5px 15px 15px 5px; /*внешние отступы*/
+}
+a.idTop:hover {
+ opacity: 1;
+}
